working on splash text layout bug

--- a/source/scss/_typography.scss
+++ b/source/scss/_typography.scss
@@ -36,22 +36,26 @@ h1 {
 }
 
 .hero-text {
+  position: absolute;
+  top: 0px;
+  min-height: 20vh;
   font-family: 'Lexend Peta', sans-serif;
-  font-size: 15vw;
-  text-align: center;
-  padding-top: 50px;
+  font-size: 16vw;
   color: #eee5d8;
 }
 
 .hero-subtitle {
-  margin-top: 12vh;
+  margin-top: 22vh;
   margin-left: 7vw;
-  font-size: 5vw;
+  font-size: 7.5vh;
   font-weight: 800;
   color: #eee5d8;
+  white-space: nowrap;
 }
 
 .header-bottom-border {
+  position: absolute;
+  top: 75vh;
   overflow-x: hidden;
   overflow-y: hidden;
   display: block;
@@ -61,7 +65,7 @@ h1 {
   background-color: #26292c;
   text-align: center;
   font-size: 1.75vw;
-  margin-top: 38vh;
+  // margin-top: 38vh;
   margin-left: -10vw;
 }
 
