--- a/source/scss/templates/_navigation.scss
+++ b/source/scss/templates/_navigation.scss
@@ -123,6 +123,7 @@ header {
   height: 75vh;
   background-image: url("/images/eaz-house-splash.jpeg");
   background-position: center;
+  border: 1px solid transparent;
 }
 
 .header-one,
